# Dukerama-Brain5

camera/: CMakeLists.txt  package.xml
inter_commu/: CMakeLists.txt  CMakeLists.txt~  package.xml
irobot_auction/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
irobot_base_cailb/: CMakeLists.txt  package.xml
irobot_nbv/: CMakeLists.txt  package.xml  package.xml~
irobot_nbv_test/: CMakeLists.txt~  package.xml  package.xml~
irobot_odometry/: CMakeLists.txt  CMakeLists.txt~  package.xml
irobot_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml
irobot_waypoint_brain/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
irobot_waypoint_commander/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
irobot_waypoint_pid/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
irobot_waypoint_tracking/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
irobot_waypoint_tracking/launch/: irobot_waypoint_tracking.launch  irobot_waypoint_tracking.launch~
irobot_waypoint_tracking/src/: irobot_waypoint_tracking.cpp  irobot_waypoint_tracking.cpp~  wpstracking_lib.cpp  wpstracking_lib.cpp~  wpstracking_lib.h  wpstracking_lib.h~
maestro_servo_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros_vrpn_client/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros_vrpn_client/.svn/: all-wcprops  entries
ros_vrpn_client/launch/.svn/: all-wcprops  entries
ros_vrpn_client/src/: ros_vrpn_client.cpp  ros_vrpn_client.cpp~
ros_vrpn_client/src/.svn/: all-wcprops  entries
ros_vrpn_client/viz/.svn/: all-wcprops  entries
(+906 files in other folders)
